add images and docker files

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,48 +1,85 @@
-# See https://docs.docker.com/engine/reference/builder/#dockerignore-file for more about ignoring files.
+# Git
+.git
+.gitignore
 
-# Ignore git directory.
-/.git/
-/.gitignore
+# Documentation
+README.md
+*.md
 
-# Ignore bundler config.
-/.bundle
+# Logs
+log/*
+*.log
 
-# Ignore all environment files (except templates).
-/.env*
-!/.env*.erb
+# Runtime data
+pids/*
+*.pid
+*.seed
+*.pid.lock
 
-# Ignore all default key files.
-/config/master.key
-/config/credentials/*.key
+# Coverage directory used by tools like istanbul
+coverage/
 
-# Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
-!/log/.keep
-!/tmp/.keep
+# nyc test coverage
+.nyc_output
 
-# Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/.keep
+# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
 
-# Ignore storage (uploaded files in development and any SQLite databases).
-/storage/*
-!/storage/.keep
-/tmp/storage/*
-!/tmp/storage/.keep
+# Bower dependency directory (https://bower.io/)
+bower_components
 
-# Ignore assets.
-/node_modules/
-/app/assets/builds/*
-!/app/assets/builds/.keep
-/public/assets
+# node_modules
+node_modules/
 
-# Ignore CI service files.
-/.github
+# Optional npm cache directory
+.npm
 
-# Ignore development files
-/.devcontainer
+# Optional REPL history
+.node_repl_history
 
-# Ignore Docker-related files
-/.dockerignore
-/Dockerfile*
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+.env.production
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Temporary folders
+tmp/
+temp/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Test files
+spec/
+test/
+
+# Development files
+config/database.yml
+config/master.key
+config/credentials.yml.enc
+
+# Docker files
+Dockerfile
+.dockerignore
+docker-compose.yml
