--- a/config/database.yml
+++ b/config/database.yml
@@ -29,11 +29,5 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV['DATABASE_URL'] %>
-  database: <%= ENV['DATABASE_NAME'] || 'birth_stone_app_production' %>
-  username: <%= ENV['DATABASE_USERNAME'] || 'birth_stone_app_production_user' %>
-  password: <%= ENV['DATABASE_PASSWORD'] || 'sNCpG1D0mYWicW0FmEsAoNfJln8MYcCe' %>
-  host: <%= ENV['DATABASE_HOST'] || 'localhost' %>
-  port: <%= ENV['DATABASE_PORT'] || 5432 %>
-  sslmode: <%= ENV['DATABASE_SSLMODE'] || 'require' %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+  url: <%= ENV["DATABASE_URL"] %>
